artiq/test/lit/inferencer/error_iterable.py
# RUN: %python -m artiq.compiler.testbench.inferencer +diag %s >%t
# RUN: OutputCheck %s --file-to-check=%t

# CHECK-L: ${LINE:+1}: error: type numpy.int? is not iterable
for x in 1: pass
